mejoras en el sitio

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                         <li><span class="title">Freelance</span><span class="value">Disponible</span></li>
                                     </ul>
                                     <div class="resume-button mt-30">
-                                        <a class="btn-main" href="https://drive.google.com/file/d/1YYMeptc7s9u4yFPjdxTqfOekK8Y7TROh/view?usp=sharing" target="_blank" rel="noopener noreferrer">Mira mi CV</a>
+                                        <a class="btn-main" href="https://drive.google.com/file/d/1O3M4CKyhvHuOMEKB8TiqX1iIKCMo7aDM/view?usp=sharing" target="_blank" rel="noopener noreferrer">Mira mi CV</a>
                                     </div>
                                 </div>
                             </div>
@@ -704,10 +704,10 @@
                             <!--Portfolio Filter-->
                             <div class="col-md-12 portfolio-filter text-center">
                                 <ul>
-                                    <li class="active" data-filter="*">All</li>
-                                    <li data-filter=".brand">Brand</li>
-                                    <li data-filter=".design">Design</li>
-                                    <li data-filter=".graphic">Graphic</li>
+                                    <li class="active" data-filter="*">Todos</li>
+                                    <li data-filter=".brand">Marca</li>
+                                    <li data-filter=".design">Diseño</li>
+                                    <li data-filter=".graphic">Gráfico</li>
                                 </ul>
                             </div>
                         </div>
@@ -721,8 +721,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-1.jpg" alt="">
                                         <figcaption>
-                                            <h4>Book Design</h4>
-                                            <p>Graphic</p>
+                                            <h4>Diseño de Libro</h4>
+                                            <p>Gráfico</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -734,8 +734,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-2.jpg" alt="">
                                         <figcaption>
-                                            <h4>Notepad Design</h4>
-                                            <p>Design</p>
+                                            <h4>Diseño de Bloc</h4>
+                                            <p>Diseño</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -747,8 +747,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-3.jpg" alt="">
                                         <figcaption>
-                                            <h4>Creative Cup</h4>
-                                            <p>Graphic</p>
+                                            <h4>Tasa Creativa</h4>
+                                            <p>Gráfico</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -760,8 +760,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-4.jpg" alt="">
                                         <figcaption>
-                                            <h4>Business Card</h4>
-                                            <p>Design</p>
+                                            <h4>Tarjeta de Presentación</h4>
+                                            <p>Diseño</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -774,7 +774,7 @@
                                         <img src="img/portfolio/img-5.jpg" alt="">
                                         <figcaption>
                                             <h4>Back Pack</h4>
-                                            <p>Brand</p>
+                                            <p>Marca</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -786,8 +786,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-6.jpg" alt="">
                                         <figcaption>
-                                            <h4>Door Hangar</h4>
-                                            <p>Design</p>
+                                            <h4>Puerta Hangar</h4>
+                                            <p>Diseño</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -799,8 +799,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-7.jpg" alt="">
                                         <figcaption>
-                                            <h4>Notepad Design</h4>
-                                            <p>graphic</p>
+                                            <h4>Diseño de Bloc</h4>
+                                            <p>Gráfico</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -813,7 +813,7 @@
                                         <img src="img/portfolio/img-8.jpg" alt="">
                                         <figcaption>
                                             <h4>Creative Flyer</h4>
-                                            <p>Brand</p>
+                                            <p>Marca</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -821,12 +821,12 @@
 
                             <!--Portfolio Item-->
                             <div class="item col-lg-4 col-sm-6 brand">
-                                <a class="video-link" href="https://www.youtube.com/watch?v=k_okcNVZqqI">
+                                <a class="video-link" href="#https://www.youtube.com/watch?v=k_okcNVZqqI">
                                     <figure>
                                         <img src="img/portfolio/img-9.jpg" alt="">
                                         <figcaption>
                                             <h4>Mobile App</h4>
-                                            <p>Brand</p>
+                                            <p>Marca</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -838,8 +838,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-10.jpg" alt="">
                                         <figcaption>
-                                            <h4>Cup Design</h4>
-                                            <p>Graphic</p>
+                                            <h4>Diseño de Tasa</h4>
+                                            <p>Gráfico</p>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -851,8 +851,8 @@
                                     <figure>
                                         <img src="img/portfolio/img-11.jpg" alt="">
                                         <figcaption>
-                                            <h4>Creative Box</h4>
-                                            <p>brand</p>
+                                            <h4>Cajita Creativa</h4>
+                                            <p>Marca</p>
                                         </figcaption>
                                     </figure>
                                 </a>
