--- a/single-work.html
+++ b/single-work.html
@@ -1,33 +1,29 @@
 <!doctype html>
-<html lang="en">
-    
-<!-- Mirrored from watson-vcard.netlify.app/single-work.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 May 2022 17:31:33 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<html lang="es">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
         <meta charset="UTF-8">
-        <title>Single Ajax Portfolio</title>
+        <title>Sitio en construcción...</title>
     </head>
     <body>
         <div class="single-work">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-10 offset-md-1 mb-40">
-                        <h1 class="title mb-30">Project Title</h1>
-                        <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae temporibus quidem. Porro itaque quas expedita fugiat accusantium, harum. Quasi provident necessitatibus omnis vel sunt Quia consectetur vel exercitationem debitis aut Excepturi ut possimus suscipit in reprehenderit. Eaque natus quia!  </p>
+                        <h1 class="title mb-30">Lo siento en Construcción!</h1>
+                        <p class="mb-30">Estamos trabjando para brindarte una mejor experiencia en la navegación de nuestro sitio muy pronto estaremos de vuelta gracias por tu comprensión.</p>
                         <ul class="information">
-                            <li><span class="title">Client:</span> Themeforest</li>
+                            <li><span class="title">Cliente:</span> Themeforest</li>
                             <li><span class="title">Website:</span> envato.com</li>
-                            <li><span class="title">Category:</span> web, creative, photography</li>
+                            <li><span class="title">Categoría:</span> web, creativo, fotografía</li>
                         </ul>
 
-                        <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                        <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                        <figure class="mt-30"><img src="img/enconstruccion.png" alt=""></figure>
+                        <!--<figure class="mt-30"><img src="img/enconstruccion2.png" alt=""></figure>-->
 
                     </div>
                 </div>
             </div>
         </div>
     </body>
-
-<!-- Mirrored from watson-vcard.netlify.app/single-work.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 May 2022 17:31:35 GMT -->
 </html>
