actualizar foto perfil

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="header-main" data-simplebar>
                         <div class="image-container">
                             <h2 class="header-name">Deiby Torrez</h2>
-                            <img src="img/perfil.jpg" alt="profile-pic">
+                            <img src="img/perfil2.png" alt="profile-pic">
                         </div>
 
                         <!--Nav Menus-->
@@ -181,17 +181,30 @@
                         <!-- About Info Row Start-->
                         <div class="row about mb-70">
 
-                            <div class="col-lg-8">
+                            <div class="col-lg-8" style="background-color: #f9f9f9; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                                 <!--Personal Intro-->
-                                <h3 class="mb-20">UI/UX Technical & Developer</h3>
-                                <p>Soy una persona muy apasionado por la tecnología que siempre para en constante actualización y mejorano mi técnica a la hora de encontrarme con los desafíos cotidianos.</p>
-                                <p>Mi frase es tiene circuitos tiene solución a la hora de aplicar técnicas de reparación de hardware. Por otro lado es muy interesante digitalizar la información de cualquier ámbito hoy en día, me fascina hacerlo diseñando y desarrollandolo.</p>
-
-                                <!--Signature Image-->
-                                <div class="signature mt-20">
-                                    <img src="https://qrcode.tec-it.com/API/QRCode?data=https%3a%2f%2fwww.deibytorrez.xyz%2f&backcolor=%23ffffff" alt="Qr de mi página web">
+                                <h3 class="mb-20" style="font-size: 2rem; font-weight: bold; color: #00aec7; text-transform: uppercase; margin-bottom: 1.5rem;">UI/UX Technical & Developer</h3>
+                                <p style="font-size: 1.1rem; line-height: 1.8; color: #333;">  
+                                    Soy un apasionado de la tecnología, siempre en constante aprendizaje y perfeccionamiento de mis habilidades para enfrentar los desafíos del día a día.  
+                                    Mi curiosidad y dedicación me impulsan a encontrar soluciones innovadoras en cada proyecto que emprendo.  
+                                </p>
+                                <p style="font-size: 1.2rem; font-weight: bold; color: #001f5f;">  
+                                    <strong>Mi filosofía:</strong> *Si tiene circuitos, tiene solución.*  
+                                </p>
+                                <p style="font-size: 1.1rem; line-height: 1.8; color: #333;">  
+                                    Esta mentalidad guía mi enfoque tanto en la reparación de hardware como en el diseño y desarrollo digital. Me encanta digitalizar y optimizar información en cualquier ámbito, transformando ideas en experiencias funcionales y atractivas a través del diseño y desarrollo web.  
+                                    Cada proyecto es una oportunidad para combinar creatividad y tecnología, construyendo soluciones que marcan la diferencia.  
+                                </p>
+                                <!--Signature and QR Code-->
+                                <div class="signature" style="margin-top: 2rem; text-align: center;">
+                                    <p style="font-size: 1rem; color: #555;">Visita mi sitio web:</p>
+                                    <div style="width: 10rem; margin: 0 auto;">
+                                        <img src="https://qrcode.tec-it.com/API/QRCode?data=https%3a%2f%2fwww.deibytorrez.lat%2f&backcolor=%23ffffff" 
+                                            alt="QR de mi página web" style="width: 100%; border: 2px solid #00aec7; border-radius: 8px;">
+                                    </div>
                                 </div>
                             </div>
+                            
 
                             <!--Personal Info-->
                             <div class="col-lg-4">
@@ -1093,8 +1106,6 @@
                     <!--Google Map End-->
                 </section>
                 <!--Contact Section End-->
-
-
             </div>
             <!--Main End-->
 
